@@ -6,6 +6,8 @@
   o wrap big messages (mga#5118)
 - library:
   o enhanced doc
+- urpm[fq]:
+  o make --use-distrib works as user (mga#1225)
 
 Version 7.8.3 - 04 October 2012, by Thierry Vignaud
 
